--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,10 +33,14 @@
     </style>
 
     <style name="tabTextStyle">
-
         <item name="fontFamily">@font/poppinsmedium</item>
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="MenuItemStyle">
+        <item name="android:textColor">@color/orange</item>
+    </style>
+
 
     <style name="BottomNavigationLabelStyle" parent="@style/TextAppearance.AppCompat">
         <item name="android:textSize">10sp</item>
