--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,4 +61,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/poppinsmedium</item>
+    </style>
 </resources>
