--- a/app/src/main/res/layout/activity_fill_profile.xml
+++ b/app/src/main/res/layout/activity_fill_profile.xml
@@ -153,7 +153,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/birth" />
 
             <EditText
-                android:id="@+id/ed_fav_author"
+                android:id="@+id/ed_fav_book"
                 style="@style/textStyleMedium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
             <EditText
-                android:id="@+id/ed_descgoals"
+                android:id="@+id/ed_fav_author"
                 style="@style/textStyleMedium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -191,7 +191,7 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ed_fav_author" />
+                app:layout_constraintTop_toBottomOf="@+id/ed_fav_book" />
 
             <!--            <Button-->
             <!--                android:id="@+id/btn_next"-->
@@ -244,7 +244,7 @@
                 android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_card_routine2"
-                app:layout_constraintTop_toBottomOf="@+id/ed_descgoals">
+                app:layout_constraintTop_toBottomOf="@+id/ed_fav_author">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/category_card"
@@ -257,6 +257,7 @@
 
                     <com.capstone.moru.ui.customview.CustomCategory
                         android:id="@+id/custom_category2"
+                        android:text="Adventure"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -299,8 +300,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:clickable="true"
-                    android:isIndicator="true"
                     android:numStars="5"
                     android:stepSize="0.5"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -346,6 +345,7 @@
                         android:gravity="center"
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="4dp"
+                        android:text="Mystery"
                         android:textSize="8sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -382,9 +382,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:clickable="true"
                     android:contentDescription="@string/rating"
-                    android:isIndicator="true"
+
                     android:numStars="5"
                     android:stepSize="0.5"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -433,6 +432,7 @@
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="4dp"
                         android:textSize="8sp"
+                        android:text="Romance"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.cardview.widget.CardView>
@@ -467,9 +467,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:clickable="true"
                     android:contentDescription="@string/rating"
-                    android:isIndicator="true"
                     android:numStars="5"
                     android:stepSize="0.5"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -521,9 +519,19 @@
             android:background="@drawable/custom_rounded_btn_bg"
             android:elevation="0dp"
             android:padding="6dp"
-            android:text="@string/next"
+            android:text="@string/save"
             android:textSize="20sp"
             />
     </LinearLayout>
 
+    <ProgressBar
+        android:visibility="invisible"
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
