--- a/app/src/main/res/layout/activity_fill_profile.xml
+++ b/app/src/main/res/layout/activity_fill_profile.xml
@@ -70,16 +70,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
+
                 android:text="@string/fill_your_book_preferences"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ed_name_exercise" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_profile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="24dp"
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/ImageView.Round"
                 android:contentDescription="@string/image_profile"
                 android:src="@drawable/placeholder_profile_user"
                 app:layout_constraintEnd_toEndOf="parent"
