--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,11 +8,13 @@
     tools:layout_editor_absoluteX="-13dp"
     tools:layout_editor_absoluteY="-108dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_profile"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginStart="24dp"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/ImageView.Round"
         android:layout_marginTop="32dp"
         android:src="@drawable/placeholder_profile_user"
         app:layout_constraintStart_toStartOf="parent"
